# drill

./: Cargo.toml  justfile
src/: lib.rs  main.rs
src/backend/: index.rs  mod.rs  sr.rs
src/units/: app.rs  mod.rs  side_menu.rs  top_menu.rs
